--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
+    "chart.js": "^4.5.0",
     "khalti-checkout-web": "^2.2.0",
+    "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
-    "tailwindcss": "^4.1.4"
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.4",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
