--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.12",
     "khalti-checkout-web": "^2.2.0",
     "next-auth": "^5.0.0-beta.28",
     "react": "^19.0.0",
